adding new api for Activity
